# teamdate

./: Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: rust.yml
config/: teams.toml
src/: config.rs  main.rs
