[package]
name = "teamdate"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.6", features = ["serde"] }
chrono-english = { version = "0.1" }
clap = "3.2"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
wyz = "0.5"

[[bin]]
name = "tdate"
path = "src/main.rs"
