[package]
name = "teamdate"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
homepage = "https://github.com/alexsnaps/teamdate"
description = "Helps you keep track of time for team members across different time zones & DST changes"

[dependencies]
chrono = { version = "0.4" }
chrono-tz = { version = "0.6", features = ["serde"] }
chrono-english = { version = "0.1" }
lazy_static = "1.4.0"
clap = "4.0"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
wyz = "0.5"

[[bin]]
name = "tdate"
path = "src/main.rs"
